--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
+node_modules/
+dist/
 dist-ssr
 *.local
 
@@ -25,3 +25,8 @@ dist-ssr
 
 # Backend
 backend/__pycache__/
+
+venv/
+*.html
+
+backend/venv/
