--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,6 @@ Flask==3.0.3
 Flask-Cors==4.0.1
 feedparser==6.0.11
 beautifulsoup4==4.12.3
-requests==2.31.0 
+requests==2.31.0
+lxml==5.2.2
+google-generativeai==0.7.1 
