🔧 Fix Railway deployment: Python3 and dependencies
- Fix Procfile: Use python3 instead of python (Railway compatibility)
- Fix railway.toml: Update startCommand to python3
- Add nixpacks.toml: Explicit Python 3.11 configuration for Railway
- Copy requirements.txt to root: Railway auto-installs dependencies
- Fix cron_run.py: Use python3 in subprocess calls
- Resolves: '/bin/bash: line 1: python: command not found' error

This should fix the 502 errors and enable database API endpoints in production.

--- a/railway.toml
+++ b/railway.toml
@@ -2,14 +2,11 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "cd backend && python server.py"
+startCommand = "cd backend && python3 server.py"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [env]
-PYTHONPATH = "backend"
-
-[variables]
-PORT = "5001" 
+PYTHONPATH = "./backend" 
