--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,3 @@
-[build]
-builder = "nixpacks"
-
 [deploy]
-startCommand = "cd backend && python3 server.py"
-healthcheckPath = "/"
-healthcheckTimeout = 100
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-
-[env]
-PYTHONPATH = "./backend" 
+startCommand = "python3 backend/server.py"
+healthcheckPath = "/" 
